	PR debug/43166 	* cfgexpand.c (expand_debug_expr) <case VAR_DECL>: If mode is 	BLKmode, assert op0 is a MEM and just adjust its mode.

* trans-common.c (build_common_decl): Also update DECL_MODE,
	and DECL_SIZE when encountering a larger common block and call
	layout_decl.

	* gfortran.dg/debug/pr43166.f: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157063 138bc75d-0d04-0410-961f-82ee72b054a4